# WordCounter

./: .gitignore  CMakeLists.txt  README.md
include/: fileprocessor.h  fileprocessorthread.h
qml/: Main.qml  WordHistogram.qml
src/: fileprocessor.cpp  fileprocessorthread.cpp  main.cpp
